# rbcp

./: Cargo.toml  MIGRATION_SUMMARY.md  build_error.txt  readme.md
rbcp-core/: Cargo.toml
rbcp-core/src/: args.rs  copy.rs  engine.rs  lib.rs  progress.rs  utils.rs
src/: args.rs  copy.rs  engine.rs  gui.rs  lib.rs  main.rs  progress.rs  stats.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
ui/: index.html  main.js  style.css
